--- a/src/App.module.sass
+++ b/src/App.module.sass
@@ -28,3 +28,8 @@
     vertical-align: top
     margin-right: 20px
     float: left
+
+.inputs
+    display: flex
+    justify-content: space-between
+    min-width: 500px
