--- a/src/App.module.sass
+++ b/src/App.module.sass
@@ -7,7 +7,7 @@
     flex-direction: column
     align-items: center
     padding-top: 30vh
-    font-size: calc(10px + 2vmin)
+    font-size: 18px
     color: #555
 
 
