Added some styling and the dog just to make it more nice.

--- a/src/App.module.sass
+++ b/src/App.module.sass
@@ -6,9 +6,9 @@
     display: flex
     flex-direction: column
     align-items: center
-    padding-top: 30vh
+    padding-top: 10vh
     font-size: 18px
-    color: #555
+    color: $textColor
 
 
 .character
@@ -33,3 +33,9 @@
     display: flex
     justify-content: space-between
     min-width: 500px
+    
+.dogHolder
+    width: 150px
+    height: 150px
+    background: url(./snuffles.png)
+    background-size: cover
