--- a/src/components/AutoComplete.module.sass
+++ b/src/components/AutoComplete.module.sass
@@ -4,11 +4,16 @@
     position: relative
     
 .input
-    height: 30px
+    height: 40px
     font-size: 16px
     border: $border
-    border-radius: 3px
-    padding: 5px
+    border-radius: 5px
+    padding: 5px 10px
+    color: $textColor
+    &:focus
+        outline-style: none
+        border-color: darken($borderColor, 20%)
+        border-bottom-left-radius: 0
     
 .optionsHolder
     position: relative
@@ -21,7 +26,7 @@
     max-height: 200px
     min-width: 100%
     overflow-y: auto
-    border-radius: 2px
+    border-radius: 0 5px 5px 5px
 
 .optionItem
     height: 30px
@@ -38,7 +43,7 @@
     border: 2px dashed #489cc1
     position: absolute
     right: 5px
-    top: 4px
+    top: calc(50% - 10px)
     width: 20px
     height: 20px
     border-radius: 50%
